gobmkida/c1/propagate_worm2
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/propagate_worm2/src/engine/worm.c:1681:33: error: use of undeclared identifier 'worm_data'
memcpy( v3, &worm[str], sizeof( worm_data)); 
                                ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/propagate_worm2/src/obj/1/worm.o] Error 1
